--- a/HomePage.html
+++ b/HomePage.html
@@ -137,6 +137,12 @@
             text-align: center;
             padding: 1rem;
         }
+
+        .video-container iframe {
+            width: 100%;
+            height: 300px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -172,24 +178,42 @@
         <p>Get hands-on experience with leading tech companies.</p>
         <a href="CoursesPage.html" class="cta-button">Learn More</a>
         <div class="video-container">
-            <iframe src="https://youtube.com/embed/nak-UbbpxnU?si=0T24Bfo97cgC05Xk" title="Internships Video 1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/U3Op_F5Sy0A" title="Internship Opportunities Video 1" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://youtube.com/embed/OhMBBbhbX6A?si=47mzeoss4yzHerBI" title="Internships Video 2" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/7dDAhjR14QA" title="Internship Opportunities Video 2" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://youtube.com/embed/BDepj5WFkas?si=N7PHGAHAkAUSyD-W" title="Internships Video 3" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/2Aqg9ywl35w" title="Internship Opportunities Video 3" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <div class="program-card">
         <h3>Coding Bootcamps</h3>
         <p>Accelerate your career with our comprehensive bootcamps.</p>
         <a href="LearnPage.html" class="cta-button">Learn More</a>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/5WUp2vYYsAw" title="Coding Bootcamp Video 1" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/j9kz0yyXfbA" title="Coding Bootcamp Video 2" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/6w7t3LO9XaI" title="Coding Bootcamp Video 3" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
     <div class="program-card">
         <h3>Mentorship Programs</h3>
         <p>Get guidance and support from industry experts.</p>
         <a href="ContactPage.html" class="cta-button">Learn More</a>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/Dy7P-HvVA8s" title="Mentorship Video 1" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/9_Dpsm59gEw" title="Mentorship Video 2" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/fqJHz0U_6tQ" title="Mentorship Video 3" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 </section>
 
@@ -208,11 +232,10 @@
 </section>
 
 <section class="cta">
-    <h2 style="color: #111010;">Ready to Level Up?</h2> <!-- Updated to grey -->
+    <h2 style="color: #111010;">Ready to Level Up?</h2>
     <p style ="color: #111010">Join the A.F.R.O Byte community today and start your journey in tech!</p>
     <a href="signup.html" class="cta-button">Sign Up Now</a>
 </section>
-
 
 <footer>
     <p>AfroByte</p>
