--- a/HomePage.html
+++ b/HomePage.html
@@ -178,13 +178,13 @@
         <p>Get hands-on experience with leading tech companies.</p>
         <a href="CoursesPage.html" class="cta-button">Learn More</a>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/U3Op_F5Sy0A" title="Internship Opportunities Video 1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=OhMBBbhbX6A" title="Internship Opportunities Video 1" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/7dDAhjR14QA" title="Internship Opportunities Video 2" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=yjveULxT9WI" title="Internship Opportunities Video 2" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/2Aqg9ywl35w" title="Internship Opportunities Video 3" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=-U0u1tJk0OE" title="Internship Opportunities Video 3" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <div class="program-card">
